 It's the same behaviour as previous --disablemenu. Now --disablemenu only disables the menu but does not close the emulator
Added setting to disable looking for alternate character sets from sysvar 23606/7 on ocr functions
 
Added Borland Gui Style

Added ZRCP commands:
-cpu-code-coverage: working with code coverage
-cpu-history: working with cpu history
-get-ui-io-ports: to get keyboard state and joystick
-get-snapshot: get a ZSF snapshot from ZRCP
-print-footer: print message on footer
-put-snapshot: put a ZSF snapshot from ZRCP
-send-keys-event: simulates key press/release
-set-ui-io-ports: to change keyboard state and joystick
-write-port: write value to a port

Added internal zip decompressor: no more need to use external unzip program
Added setting to reset configuration file to default values
Added setting to choose cpu type

Improved Debugging: 
-added setting to dump .zsf snapshot when a cpu panic is fired
-debug CPU window: can now resize height and have more debug lines
-cpu transaction log: faster when opening transaction log file
-added key 'n' for "run" on debug cpu. Does the same as closing all menus and returning back to emulation
-debug CPU window: show interrupt routine pointer on im2 mode

Improved TBBlue emulation:
-added scroll x,y on ula layer
-optimized ula,lores render routines: 2% less cpu on my computer
-added 1-bit tile mode

Improved Hex editor: can now copy to a different memory zone
Improved menu: 
-can now use PgUp,PgDn to jump menu pages
-added setting to disable File Utilities menu
-added more cyrillic characters support
-disabled menu items (the ones in red) are now called as "unavailable" instead of "disabled"


Improved accesibility: 
-say when a selected menu item is not available
-Mac OS speech filter doesn't fail anymore when message has "-"
-selected item menu is called now "Selected item" (was called "Active item" before)

Improved assembler: added defs command
Improved AY Sheet: now you can select which AY Chip to show